593 ==> 402029 - Find New Items process takes significantly longer to finish on 6.0.0.
594 ==> 402286 - Metadata settings don't display the combo value options.
595 ==> 402288 - The default Xmp.lr.hierarchicalSubject setting does not read darktable tags.
596 ==> 402300 - Template string in Help > About.
597 ==> 402283 - Duplicate entries drive to unpredictable performance.
598 ==> 402380 - Database schema upgrade to V10 is incomplete.
599 ==> 402379 - Moving location of RAW file causes loss of metadata.
600 ==> 366211 - When changing database, cannot open thumbnails into edit window.
601 ==> 402496 - digiKam crashed after a while during face recognition.
602 ==> 402726 - Piwigo export is missing.
603 ==> 401301 - digiKam Close crash.
604 ==> 401837 - Button Caption transcription error in french.
605 ==> 398880 - digiKam stays as a background process after closing.
606 ==> 398129 - ExpoBlend tool filename dialog shows previous file's name.
607 ==> 402556 - digikam-data conflict with dropbox installation.
608 ==> 402733 - Launch failure on MacOS with Digkam 6 beta3.
609 ==> 388705 - Unexpected crash on adding new items to the collection from an external application - 5.7.0 suse packages.
610 ==> 402800 - Main album view does not update when moving images between albums.
611 ==> 402811 - Drag-n-drop disabled in Geolocation editor.
612 ==> 402812 - Use RED "recycle bin" icon from Albums context menus in all other 'delete' context menu items too.
613 ==> 402809 - Clicking on "Import" toolbar button in import preview does nothing.
614 ==> 372650 - On OS X, when tagging multiple images metadata is not correctly written to some image files or sidecars.
615 ==> 389241 - Several errors in migrating from sqlite to external mysql server.
616 ==> 402979 - Can't rename album in collection on NTFS usb drive.
617 ==> 389690 - Updated image label and image is broken after metadata is written to file.
618 ==> 402944 - crash while looking at face tags.
619 ==> 